--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 <body>
     <div class="container-fluid">
         <div class="row sticky-top border-bottom border-primary">
-            <div class="col-8">
+            <div class="col-6">
                 <img id="logo" src="img/logoblu.png" alt="logobianco">
             </div>
-
-            <div class="col-4">
                 <button id="toggle" class="hamburger hamburger--arrow" type="button">
                     <span class="hamburger-box">
                         <span class="hamburger-inner"></span>
@@ -39,7 +37,7 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-            </div>
+
         </div>
 
         <div class="row vh-100 d-flex align-items-center" id="intro">
@@ -121,7 +119,7 @@
         </div>
 
         <div class="row">
-            <div class="col">
+            <div class="col overflow-hidden">
                 <div  class="scrolling">
                     <div class="message">*graphic design</div>
                     <div class="message">*web design</div>
