--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <body>
     <div class="container-fluid">
         <div class="row sticky-top border-bottom border-primary">
-            <div class="col-6">
+            <div class="col">
                 <img id="logo" src="img/logoblu.png" alt="logobianco">
             </div>
+
                 <button id="toggle" class="hamburger hamburger--arrow" type="button">
                     <span class="hamburger-box">
                         <span class="hamburger-inner"></span>
