--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Micol</title>
+    <link rel="icon" href="img/logoblu.png" type="image/png">
 
     <link rel="stylesheet" href="reset.css">
 
