--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <!--window:load-->
+    <!--window onload-->
     <div id="loading">
         <img src="img/logobianco.png" alt="loading...">
     </div>
@@ -192,6 +192,11 @@
               <select id="inputState" class="form-select">
                 <option selected>Choose...</option>
                 <option>Italy</option>
+                <option>UK</option>
+                <option>USA</option>
+                <option>Spain</option>
+                <option>France</option>
+                <option>Germany</option>
               </select>
             </div>
 
